--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div id="mensaje" style="display: none;">
             <h2>¡Feliz 16 meses amor! 💖</h2>
             <p>Te amo con todo mi corazón💕. Espero que este pequeño detalle te saque una sorisa hermosa.</p>
-            <img src="miimagen.jpg" alt="Descripción de la imagen">
-        </div>
+         </div>
+       <div <img src="miimagen.jpg" alt="Descripción de la imagen">
     <div>
     <h2>Galería de imágenes</h2>
     <img src="imagen1.jpg" alt="Imagen 1">
