--- a/index.html
+++ b/index.html
@@ -12,15 +12,19 @@
         <p>Este mensaje se desbloqueará el 10/05:</p>
         <div id="countdown"></div>
         <div id="mensaje" style="display: none;">
-            <h2>¡Feliz 16 meses amor! 💖</h2>
-            <p>Te amo con todo mi corazón💕. Espero que este pequeño detalle te saque una sorisa hermosa.</p>
-         </div>
-       <div <img src="miimagen.jpg" alt="Descripción de la imagen">
+    <h2>¡Feliz 16 meses amor! 💖</h2>
+    <p>Te amo con todo mi corazón💞. Espero que este pequeño detalle te saque una sonrisa hermosa.</p>
+    
+    <h2>¡El tiempo ha terminado! 🎉</h2>
+    <p>La cuenta regresiva ha finalizado correctamente.</p>
+    
     <div>
-    <h2>Galería de imágenes</h2>
-    <img src="imagen1.jpg" alt="Imagen 1">
-    <img src="imagen2.jpg" alt="Imagen 2">
-    <img src="imagen3.jpg" alt="Imagen 3">
+        <img src="miimagen.jpg" alt="Imagen especial">
+        <img src="imagen1.jpg" alt="Imagen 1">
+        <img src="imagen2.jpg" alt="Imagen 2">
+        <img src="imagen3.jpg" alt="Imagen 3">
+    </div>
+</div>
 </div>
     </div>
     <script src="script.js"></script>
